final changes to styles.css chorme horizontal scroll bug solved -5.0

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
-  /* width: 100vw; */
+  width: 100vw;
 }
 #footer {
   background-color: #444;
